--- a/conf/nginx/http.conf
+++ b/conf/nginx/http.conf
@@ -48,4 +48,43 @@ http {
       proxy_set_header X-Forwarded-Host $server_name;
     }
   }
+
+  server {
+    listen 443 ssl;
+
+    server_name  play.stellarvector.be;
+    ssl_certificate /etc/letsencrypt/live/play.stellarvector.be/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/play.stellarvector.be/privkey.pem;
+
+    gzip on;
+
+    client_max_body_size 4G;
+
+    # Handle Server Sent Events for Notifications
+    location /events {
+
+      proxy_pass http://app_servers;
+      proxy_set_header Connection '';
+      proxy_http_version 1.1;
+      chunked_transfer_encoding off;
+      proxy_buffering off;
+      proxy_cache off;
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Host $server_name;
+    }
+
+    # Proxy connections to the application servers
+    location / {
+
+      proxy_pass http://app_servers;
+      proxy_redirect off;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Host $server_name;
+    }
+  }
 }
